force-app/main/default/objects/CAMERA_LIVE_AUTH_MNG__x/CAMERA_LIVE_AUTH_MNG__x.object-meta.xml
<CustomObject>
    <description>CAMERA_LIVE_AUTH_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>CAMERA_LIVE_AUTH_MNG</externalName>
    <label>カメラ映像権限管理</label>
</CustomObject>