force-app/main/default/objects/CAMERA_LIVE_AUTH_MNG__x/fields/browse_end_date__c.field-meta.xml
<CustomField>
    <fullName>browse_end_date__c</fullName>
    <description>browse_end_date</description>
    <externalDeveloperName>browse_end_date</externalDeveloperName>
    <label>browse_end_date</label>
    <type>DateTime</type>
</CustomField>