force-app/main/default/objects/CAMERA_LIVE_AUTH_MNG__x/fields/camera_live_auth_mng_id__c.field-meta.xml
<CustomField>
    <fullName>camera_live_auth_mng_id__c</fullName>
    <description>camera_live_auth_mng_id</description>
    <externalDeveloperName>camera_live_auth_mng_id</externalDeveloperName>
    <label>camera_live_auth_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>