force-app/main/default/objects/CAMERA_LIVE_AUTH_MNG__x/fields/operater_id__c.field-meta.xml
<CustomField>
    <fullName>operater_id__c</fullName>
    <description>operater_id</description>
    <externalDeveloperName>operater_id</externalDeveloperName>
    <label>operater_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>