force-app/main/default/objects/CAMERA_LIVE_AUTH_MNG__x/fields/sights_camera_inf_id__c.field-meta.xml
<CustomField>
    <fullName>sights_camera_inf_id__c</fullName>
    <description>sights_camera_inf_id</description>
    <externalDeveloperName>sights_camera_inf_id</externalDeveloperName>
    <label>sights_camera_inf_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>